--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/checkoutPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/checkoutPage.css
@@ -78,7 +78,7 @@
 		}
 			#orderInformation {
 				width: 70%;
-				min-height: 500px; 
+				min-height: 560px; 
 				position: relative;
 				
 				border-radius: 10px;
@@ -135,7 +135,7 @@
 			      	#deliveryPickupEta {
 			      	  width: 40%;
 			      	  display: flex;
-					  margin-bottom: 20px;
+					  margin-bottom: 5px;
 					  
 					  flex-direction: column;
 					}
@@ -147,6 +147,60 @@
 							margin-left: auto;
 						}
 					
+					#orderTime {
+					  width: 40%;
+					  display: flex;
+					  
+					  flex-direction: row;
+					  margin-bottom: 8px;
+					}
+						#timeAsap {
+							width: 40%;
+							display: flex;
+							justify-content: center;
+							
+							padding: 2px;
+							padding-left: 4px;
+							border-radius: 10px;
+							border: 3px solid blue;
+							
+							background-color: rgb(213, 128, 255);
+							
+							cursor: pointer;
+						}
+						#timeLater {
+							width: 40%;
+							margin-left: auto;
+							
+							padding: 2px;
+							border-radius: 10px;
+							border: 3px solid blue;
+							
+							background-color: rgb(204, 204, 204);
+							
+							cursor: pointer;
+						}
+					#laterDateSelectorDiv {
+							width: 80%;
+							white-space: nowrap;
+
+							display: none;
+							justify-content: center;
+							margin-bottom: 10px;
+							font-size: 25px;
+					}
+						#laterDateTitle {
+							padding-right: 10px;
+							
+						}
+						#dateDropdown {
+							cursor: pointer;
+						}
+						#timeDropdown {
+							cursor: pointer;
+							margin-left: 10px;
+						}
+					
 					#deliveryPickupSelector {
 					  width: 40%;
 					  display: flex;
@@ -156,6 +210,7 @@
 							width: 40%;
 							display: flex;
 							align-items: flex-start;
+							justify-content: center;
 							
 							padding: 2px;
 							padding-left: 4px;
@@ -180,7 +235,7 @@
 						}
 						
 					#collectionMethod {
-					  width: 75%;
+					  width: 95%;
 					  display: flex;
 					  justify-content: center;
 					  align-items: center;
@@ -188,18 +243,57 @@
 					  
 					  padding-bottom: 5px;
 					  padding-top: 10px;
+					  margin-left: 100px;
 					}
 						#collectionType {
-							width: 35%;
+							width: 24%;
+							white-space: nowrap;
+							
 						}
 						#collectionLocation {
-							width: 65%;
+							width: 50%;
 							display: flex;
-							justify-content: flex-end;
+							justify-content: center;
 							align-items: center;
 							text-align: center;
 							font-style: italic;
 							
+							white-space: nowrap;
+							
+							border-radius: 10px;
+  							border: 1px solid gray;
+						}
+						#collectionLocationApt {
+							width: 21%;
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							text-align: center;
+							font-style: italic;
+							white-space: nowrap;
+							
+							border-radius: 10px;
+  							border: 1px solid gray;
+						}
+						
+						
+						#collectionLocation input,
+						#collectionLocationApt input {
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							text-align: center;
+							
+						  	width: 80%;
+						  	font-size: 17px;
+						  	margin-right: 10px;
+						  	
+						  	border-radius: 10px;
+							border: 1px solid gray;
+						}
+						#editLocationBtn {
+						  	font-size: 18px;
+  						 	cursor: pointer; 
 						}
 					
 					#userComments {
