--- a/pizza-ordedring-app/src/main/resources/templates/homePage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/homePage.html
@@ -89,6 +89,7 @@
    		<div id="pageBody">
    			<div id="body-headers">
    				<div id="storeLocation"> 156 Elderwood Ave </div>
+   				<div id="adminEditMenu"> Edit Menu </div>
    				<div id="menuTitle"> Menu </div>
    				<div id="searchMenu">
    					Search:  
