--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllDeletePage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllDeletePage.html
@@ -7,7 +7,7 @@
 <title>Online Pizza Ordering</title>
 
 <link rel="stylesheet" href="/cssStyles/backgroundAndTopBar.css">
-<link rel="stylesheet" href="/cssStyles/home.css">
+<link rel="stylesheet" href="/cssStyles/admin/adminShowAllItemsDelete.css">
 <link rel="stylesheet" href="/cssStyles/bottomLinks.css">
 
 
@@ -89,135 +89,85 @@
    		<div id="pageBody">
    			<div id="body-headers">
    				<div id="storeLocation"> 156 Elderwood Ave </div>
-   				<div id="adminEditMenu"> Edit Menu </div>
-   				<div id="menuTitle"> Menu </div>
-   				<div id="searchMenu">
-   					Search:  
-   					<div id="searchDiv">
-   							<form>
-		                        <input type="text" id="userSearchInput" placeholder="Search menu">
-		                     </form>
-		             </div>
+   				<div id="adminHomeTitle"> All Items </div>
+   				<div id="adminHomeDiv">
+   					<div id="adminHome">Admin Home</div>
    				</div>
    			</div>
    			
-   			<div id="foodCategories">
-   				<div id="foodCategories-row">
+   			<div id="showAllItemsDiv">
+   				<div id="deleteInstructions"> Click on an Item to be view its description and ingredients. </div>
+   			 	<div id="deleteInstructions"> While there you will have an option to delete the Item. </div>
+   				<div id="showAllItemsTextDiv">
    				
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/pizzaGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Pizza
-	   						</div>
-   						</div>
-   					</div>
-   					
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/sidesGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Sides
-	   						</div>
-	   					</div>
-   					</div>
-   						
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/wingsGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Wings
-	   						</div>
-	   					</div>
-   					</div>
-   					
-   				</div>
-   					
-   				<div id="foodCategories-row">
-   					
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/pastaGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Pasta
-	   						</div>
-   						</div>
-   					</div>
-   					
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/wedgieGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Wedgies
-	   						</div>
-	   					</div>
-   					</div>
-   						
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/dessertsGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Desserts
-	   						</div>
-	   					</div>
-   					</div>
-   					
-   				</div>
-   					
-   				<div id="foodCategories-row">
-   				
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/drinksGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Drinks
-	   						</div>
-	   					</div>
-   					</div>
-   						
-   					<div id="category">
-   						<div id="categoryBorder">
-	   						<div id="categoryImgDiv">
-	   							<img id="categoryImg" src="/images/categoryImages/miscGeneral.jpg">
-	   						</div>
-	   						<div id="categoryItemName">
-	   							Misc
-	   						</div>
-	   					</div>
-   					</div>
-   					
-   				</div>
-   				
+   					  <div id="rowOne-firstFourCategories">
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Category Name</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Category Name</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Category Name</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Category Name</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				      </div>
+				      
+				      <div id="rowOne-lastFourCategories">
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Pizza</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Wings</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Misc</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				    	<div id="itemCategory">
+				    		<div id="categoryName">Category Name</div>
+				    		<div id="itemInCategory">Pep Pizza</div>
+				    		<div id="itemInCategory">Pineapple Pizza</div>
+				    		<div id="itemInCategory">Spicy Pizza</div>
+				    	</div>
+				      </div>
+
+			    </div>
    			</div>
-   				
    			
-   				
-   			<div id="socialLinksBorder">
+   		</div>
+   		
+   		<div id="socialLinksBorder">
 		     	<div id="socialLinks">
 		            <b> 
 		            	<a id="gitHub" href="https://github.com/Nathan-Barthen" target="_blank">GitHub</a>
 		                <a id="linkedIn" href="https://www.linkedin.com/in/nathan-barthen-22993722a/" target="_blank">LinkedIn</a> 
 		            </b>
 		        </div>
-		    </div>
+		</div>
    			
-   		</div>
-   		
-   	
    	</div>
   </div>
 
@@ -233,15 +183,15 @@
 	
 	<script src="/javaScript/pageRedirects/clicksLoginSignup.js"></script>
 	<script src="/javaScript/pageRedirects/clicksPizzaLogo.js"></script>
-	<script src="/javaScript/pageRedirects/clicksCategory.js"></script>
 	<script src="/javaScript/pageRedirects/clicksItem.js"></script>
 	<script src="/javaScript/pageRedirects/clicksCheckout.js"></script>
 	
-	<script src="/javaScript/bodySize-homePage.js"></script>
-	<script src="/javaScript/adminPages/adminClicksEditMenu.js"></script>
+	<script src="/javaScript/adminPages/adminClicksOnItemInDelete.js"></script>
+	<script src="/javaScript/adminPages/adminClicksAdminHome.js"></script>
 	
 	<script src="/javaScript/entersLocation.js"></script>
 	<script src="/javaScript/errorRedirectPopup.js"></script>
+	
 	
 	
 	
